gcc/testsuite/gdc.test/compilable/test12567b.d
// REQUIRED_ARGS:
// PERMUTE_ARGS:
/*
TEST_OUTPUT:
---
---
*/
deprecated("message")
module test12567b;

void main() {}
